<resources>
    <string name="app_name">LARPer</string>
    <string name="account_display_name">acctDisplayName</string>
    <string name="account_id">acctId</string>
    <string name="init_profile_fragment">InitProfile</string>
    <string name="profile_fragment">Profile</string>
    <string name="map_fragment">Map</string>
    <string name="lore_fragment">Lore</string>
    <string name="blueprints_fragment">Blueprints</string>
    <string name="contacts_fragment">Contacts</string>
    <string name="new_blueprint_fragment">NewBlueprint</string>
    <string name="new_lore_fragment">NewLore</string>
    <string name="profile_attr_nickname">Nickname</string>
    <string name="profile_attr_age">Age</string>
    <string name="profile_attr_gender">Gender</string>
    <string name="profile_attr_class">Class</string>
    <string name="profile_attr_race">Race</string>
    <string name="profile_attr_hitpoints">HitPoints</string>
    <string name="profile_attr_bio">Biography</string>
    <string name="profile_attr_skills">Skills</string>
    <string name="new_item_btn">New</string>
    <string name="edit_item_btn">Edit</string>
    <string name="del_item_btn">Delete</string>
    <string name="edit_blueprint">EditBlueprint</string>
    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
